Bug 323119 - Spectrum Analyzer doesn't work with VLC phonon backend
Summary: Spectrum Analyzer doesn't work with VLC phonon backend
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View/Spectrum Analyzer (other bugs)
Version First Reported In: 2.7-git
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 2.9
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-02 20:03 UTC by Aaron
Modified: 2014-05-21 10:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aaron 2013-08-02 20:03:59 UTC
Just stumbled across this... The spectrum analyzer doesn't work when using VLC as Phonon backend. The Gstreamer backend works just as expected.

Amarok does not crash, and music plays as expected when using the VLC backend. As far as I can tell, it's just the analyzer that fails.

I get that the different Phonon backends have different feature sets, so if the VLC backend is unsupported for technical reasons, I would expect Amarok to give me a notice, e.g. when I add the applet.
Comment 1 Mark Kretschmann 2013-08-03 08:37:52 UTC
Of course we are aware that it does not currently work with Phonon-VLC. The VLC developers are working on the issue.

As for adding a notification on failure, I suppose I could do that when the user tries to add the applet manually. We're in string freeze though, so it will have to wait until version 2.9.
Comment 2 Mark Kretschmann 2013-08-22 14:54:09 UTC
Git commit 2b87fb43c550e946acfb47b3c5b217a07fcefa0c by Mark Kretschmann.
Committed on 22/08/2013 at 14:47.
Pushed by markey into branch 'master'.

Don't allow adding Analyzer applet when not supported.

Also now shows an error message explaining why it can't be used.

M  +7    -0    src/EngineController.cpp
M  +5    -0    src/EngineController.h
M  +1    -1    src/context/Containment.h
M  +2    -19   src/context/ContextView.cpp
M  +0    -5    src/context/ContextView.h
M  +13   -4    src/context/containments/verticallayout/VerticalToolbarContainment.cpp
M  +2    -2    src/context/containments/verticallayout/VerticalToolbarContainment.h

http://commits.kde.org/amarok/2b87fb43c550e946acfb47b3c5b217a07fcefa0c
Comment 3 vedant agarwala 2014-05-21 10:40:22 UTC
Git commit 4bdca9194a60bb33a806db4d98e6ade503360209 by Vedant Agarwala, on behalf of Mark Kretschmann.
Committed on 22/08/2013 at 14:47.
Pushed by vedanta into branch 'tagguessing'.

Don't allow adding Analyzer applet when not supported.

Also now shows an error message explaining why it can't be used.

M  +7    -0    src/EngineController.cpp
M  +5    -0    src/EngineController.h
M  +1    -1    src/context/Containment.h
M  +2    -19   src/context/ContextView.cpp
M  +0    -5    src/context/ContextView.h
M  +13   -4    src/context/containments/verticallayout/VerticalToolbarContainment.cpp
M  +2    -2    src/context/containments/verticallayout/VerticalToolbarContainment.h

http://commits.kde.org/amarok/4bdca9194a60bb33a806db4d98e6ade503360209