Don't allow adding Analyzer applet when not supported.

Also now shows an error message explaining why it can't be used.

BUG: 323119