src/context/Containment.h
@@ -51,7 +51,7 @@ public:
 public slots:
     void showApplet( Plasma::Applet* ) {}
     void moveApplet( Plasma::Applet*, int, int ) {}
-    virtual Applet* addApplet( const QString& pluginName, const int ) { Q_UNUSED( pluginName ); return 0; }
+    virtual void addApplet( const QString& pluginName, const int ) = 0;
 };
 
 } // Context namespace
